# NBA_Draft_Analysis

./: Makefile  README.md  pyproject.toml
data_shash/: X_test.csv  X_train.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
models/: best_model_lgbm_25218722_.pkl
nba_draft_analysis/: __init__.py  dataset.py  features.py  plots.py
nba_draft_analysis/modeling/: predict.py  train.py
notebooks/: 36120-25SP-AT1-group_9-25218722-experiment_0.ipynb  36120-25SP-AT1-group_9-25218722-experiment_1.ipynb  36120-25SP-AT1-group_9-25218722-experiment_2.ipynb  36120-25SP-AT1-group_9-25218722-experiment_3.ipynb  36120-25SP-AT1-group_9-25218722-experiment_4.ipynb
predictions_shash/: test_predictions_baseline.csv  test_predictions_dt.csv  test_predictions_lgb.csv  test_predictions_logistic.csv  test_predictions_rf.csv
