[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "nba_draft_analysis"
version = "0.0.1"
description = "The goal of this study was to forecast NBA draft results using cutting-edge machine learning techniques. The objective of the job, which was presented as a binary classification issue, was to ascertain, using pre-draft statistics and background data, whether a player would be drafted or not."
authors = [
  { name = "Shashikanth Senthil Kumar" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["nba_draft_analysis"]
include = ["pyproject.toml", "nba_draft_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["nba_draft_analysis"]
force-sort-within-sections = true

